Deluge 1.1.0_RC3 (In Development)
 Core:
  * Fix applying proxy settings

 GtkUI:
  * Fix folder renaming to display the change properly

 Plugins:
  * Label: Fix move on completed

Deluge 1.1.0_RC2 (29 December 2008)
 Core:
  * Fix new version check
  * Fix issue that prevented torrents from being added

 GtkUI:
  * Fix tooltip for 'Show session speed in titlebar' option

 Plugins:
  * Remove Stats plugin since it wasn't intended to be in this release
  * Fix never-ending import in Blocklist on Windows

 Windows:
  * Fix double-click association on Windows
  * Fix Pidgin icon interference

Deluge 1.1.0_RC1 (23 December 2008)
 Core:
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * FilterManager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)
  * Remove remaining gtk functions in common
  * Tracker icons.
  * Add ETA for torrents with stop at seed ratio set
  * Fix #47 the state and config files are no longer invalidated when there is no diskspace
  * Fix #619 return "" instead of "Infinity" if seconds == 0 in ftime
  * Add -P, --pidfile option to deluged
  * Basic authentication for remote access to daemon, see: http://dev.deluge-torrent.org/wiki/Authentication

 GtkUI:
  * Add peer progress to the peers tab
  * Add ability to manually add peers
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog
  * Redesiged sidebar with filters for Active and Tracker (see FilterManager)
  * Implement #428 the ability to rename files and directories
  * Implement #229 add date added column
  * Implement #596 show speeds in title